--- a/about.html
+++ b/about.html
@@ -2,75 +2,220 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
-
+    <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.css"/>
-
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container">
+        <a href="" class="navbar-brand"><img src="images/IMG_4773-3 - Copy.jpg"/> </a>
+        <!--<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">-->
+        <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <div class="collapse navbar-collapse" id="myMenu">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a> </li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a> </li>
+                <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a> </li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a> </li>
+            </ul>
 
-<div class="container">
-    <!--<div class="container-fluid">-->
-    <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
-            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signIn">Sing In</a> </li>
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signUp">Sign Up</a> </li>
+            </ul>
+
+
+
+
         </div>
-        <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
-            <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
+    </div>
+</nav>
+
+<br/>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/SP6.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Myself</h5>
+                    <p>Hi, I am <b>Shetu Chowdhury</b>. I love to gain my goal and be happy with my decision. I am friendly and hardworking person. Love to spend time with my family and friends. And I want to be a happy person and to keep happy other people around me. Trying to develop my skill on web developing side. I would like to learn some language (E.g English, Chinese, Italian & Russian). Travelling, gaming & watching movies are pleasure for me. And I really want to know about different cultures of our country.</p>
+                    <a href="readMore" class="btn btn-success">Read More.....</a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/FM.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">My Family</h5>
+                    <p class="card-text">My mother is a one of the best mother in this world  and she always support me. I have three loving brothers. They are very caring and concern about me and I am very lucky to become a sister of three loving brothers. My two elder brothers are married and I have a cute niece in my family. Now she is the younger family member in my home and we are really blessed for the beautiful gift from Allah.</p>
+                    <a href="" class="btn btn-success">Read More.....</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/fnd.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">My Friends</h5>
+                    <p class="card-text">I have lots of lovely friends. Now I really miss them and when we manage time we meet each other  and spend very memorable and special time.</p>
+                    <a href="" class="btn btn-success">Read More.....</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+
+<div class="modal fade" id="signIn">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3> Sign in here</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="col-sm-6" align="left">
+                    <input type="checkbox"> Remember Me
+                </div>
+                <div class="col-sm-6" align="right">
+                    <a href=":">Forgot password?</a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " align="middle">
-            <a href="index.html">Home</a> ||
-            <a href="about.html">About</a> ||
-            <a href="portfolio.html">Portfolio</a> ||
-            <a href="gallery.html">Gallery</a> ||
-            <a href="contact.html">Contact</a>
+
+<div class="modal fade" id="signUp">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Create an account</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Email Address</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="email_address" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Confirm Password</label>
+                        <div class="col-sm-8">
+                            <input type="confirm_password" name="confirm_password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " >
-            <img src="images/me.jpg" height="500" width="280" align="right" alt="">
+<section class="add-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
 
-              <p>  Hi, I am <b>Shetu Chowdhury</b>. I love to gain my goal and be happy with my
-                decision. I am friendly and hardworking person. Love to spend time with
-                my family and friends. And I want to be a happy person and to keep happy
-                other people around me. . Trying to develop my skill on web developing
-                side. I would like to learn some language (E.g English, Chinese, Italian
-                & Russian). Travelling, gaming & watching movies are pleasure for me.
-                And I really want to know about different cultures of our country.
-              </p>
-            <p>
-                My mother is a one of the best mother in this world  and she always
-                support me. I have three loving brothers. They are very caring and
-                concern about me and I am very lucky to become a sister of three loving
-                brothers. My two elder brothers are married and I have a cute niece in
-                my family. Now she is the younger family member in my home and we are
-                really blessed for the beautiful gift from Allah.
-            </p>
-            <p>
-                I have lots of lovely friends. Now I really miss them and when we manage
-                time we meet each other  and spend very memorable and special time.
-            </p>
-        </div>
+                <div class="carousel slide" data-ride="carousel" data-interval="1500">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel-item-padding">
+                            <h1 align="middle">Myself</h1>
+                            <img src="images/n.jpg" alt="">
+                            </div>
 
-    </div>
-</div>
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Family</h1>
+                            <img src="images/bro.jpg"alt="">
+                            </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " >
-            <p align="center">Created by Shetu Chowdhury</p>
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Friends</h1>
+                            <img src="images/convo.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-</div>
+</section>
+
+
+
+<script src="js/jquery-3.2.1.js"></script>
+<script src="js/popper.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>-->
 
 <script src="js/bootstrap.js"></script>
 </body>
