--- a/gallery.html
+++ b/gallery.html
@@ -2,72 +2,308 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gallery</title>
-
+    <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.css"/>
-
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container">
+        <a href="" class="navbar-brand"><img src="images/IMG_4773-3 - Copy.jpg"/> </a>
+        <!--<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">-->
+        <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <div class="collapse navbar-collapse" id="myMenu">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a> </li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a> </li>
+                <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a> </li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a> </li>
+            </ul>
 
-<div class="container">
-    <!--<div class="container-fluid">-->
-    <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
-            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signIn">Sing In</a> </li>
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signUp">Sign Up</a> </li>
+            </ul>
+
+
+
+
         </div>
-        <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
-            <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
+    </div>
+</nav>
+
+<br/>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/ma.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">My loving Maa</h5>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/convocation.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Finally Graduated</h5>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/lilbro.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Little Hangout</h5>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/bday.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Surprising gift on birthday</h5>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+
+<div class="modal fade" id="signIn">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3> Sign in here</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="col-sm-6" align="left">
+                    <input type="checkbox"> Remember Me
+                </div>
+                <div class="col-sm-6" align="right">
+                    <a href=":">Forgot password?</a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " align="middle">
-            <a href="index.html">Home</a> ||
-            <a href="about.html">About</a> ||
-            <a href="portfolio.html">Portfolio</a> ||
-            <a href="gallery.html">Gallery</a> ||
-            <a href="contact.html">Contact</a>
+
+<div class="modal fade" id="signUp">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Create an account</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Email Address</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="email_address" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Confirm Password</label>
+                        <div class="col-sm-8">
+                            <input type="confirm_password" name="confirm_password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
-            <p>My loving Maa</p>
-            <img src="images/ma.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
-            <p>Finally Graduated</p>
-            <img src="images/convocation.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
-            <p>Best bonding ever</p>
-            <img src="images/DSC_0891.jpg" height="200" width="150" alt="" align="top" class="img-thumbnail">
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
-            <p>Little Hangout</p>
-            <img src="images/lilbro.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
-            <p>Surprising gift on birthday</p>
-            <img src="images/bday.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
-            <p>Once a evening</p>
-            <img src="images/SM.jpg" height="110" width="150" alt="" align="top" class="img-thumbnail">
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
-            <p>Office Party</p>
-            <img src="images/office.jpg" height="300" width="400" alt="" align="top" class="img-thumbnail">
-            <p>Hangout with lovely colleage</p>
-            <img src="images/HOWC.jpg" height="300" width="400" alt="" align="top" class="img-thumbnail">
+<section class="add-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+
+                <div class="carousel slide" data-ride="carousel" data-interval="1500">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel-item-padding">
+                            <h1 align="middle">My loving Maa</h1>
+                            <img src="images/ma - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Finally Graduated</h1>
+                            <img src="images/convocation - Copy.jpg"alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Little Hangout</h1>
+                            <img src="images/lilbro - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Surprising gift on birthday</h1>
+                            <img src="images/bday - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Best bonding ever</h1>
+                            <img src="images/DSC_0891 - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Once an evening</h1>
+                            <img src="images/SM - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Office Party</h1>
+                            <img src="images/office - Copy.jpg" alt="">
+                        </div>
+
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Hangout with lovely colleagues</h1>
+                            <img src="images/HOWC - Copy.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</section>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/DSC_0891.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Best bonding ever</h5>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/SM.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Once an evening</h5>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/office.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Office Party</h5>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/HOWC.jpg" alt="" class="card-img-top">
+                    <h5 class="card-title">Hangout with lovely colleagues</h5>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " >
-            <p align="center">Created by Shetu Chowdhury</p>
-        </div>
-    </div>
-</div>
-</div>
+
+
+<script src="js/jquery-3.2.1.js"></script>
+<script src="js/popper.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>-->
 
 <script src="js/bootstrap.js"></script>
 </body>
