--- a/index.html
+++ b/index.html
@@ -3,85 +3,228 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-
     <link rel="stylesheet" href="css/bootstrap.css"/>
-
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container">
+        <a href="" class="navbar-brand"><img src="images/IMG_4773-3 - Copy.jpg"/> </a>
+        <!--<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">-->
+            <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <div class="collapse navbar-collapse" id="myMenu">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a> </li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a> </li>
+                <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a> </li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a> </li>
+            </ul>
 
-<div class="container">
-    <!--<div class="container-fluid">-->
-    <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
-            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signIn">Sing In</a> </li>
+                <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#signUp">Sign Up</a> </li>
+            </ul>
+
+
+
+
         </div>
-        <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
-            <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
+    </div>
+</nav>
+
+<br/>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/m.png" alt="" class="card-img-top">
+                    <h5 class="card-title">My Mission</h5>
+                    <p>Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more about <b>Web Application Development</b> by using PHP which I can use for my future career growth.</p>
+                    <a href="readMore" class="btn btn-success">Read More.....</a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/v.png" alt="" class="card-img-top">
+                    <h5 class="card-title">My Vision</h5>
+                    <p class="card-text">I want to be a well known web application developer. For gaining my goal I try to give my best effort. And I am working on it. I want to be expert on my work.</p>
+                    <a href="" class="btn btn-success">Read More.....</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card">
+
+                <div class="card-body">
+                    <img src="images/d.png" alt="" class="card-img-top">
+                    <h5 class="card-title">My Dream</h5>
+                    <pre class="card-text">I have lots of dreams……
+    1. To be a well known <b>Web Application Developer</b>.
+    2. Be a hacker.
+    3. Be an expert on my work.
+    4. Wants to buy different type of cars.
+    5. I want to keep a lion as my pet.
+    6. Wants to be a perfect happy person.
+    7. Wants to help poor, uneducated people for their better life.
+    8. And when getting old, i want to live in village with my green garden.
+                    </pre>
+                    <a href="" class="btn btn-success">Read More.....</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+
+<div class="modal fade" id="signIn">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3> Sign in here</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="col-sm-6" align="left">
+                    <input type="checkbox"> Remember Me
+                </div>
+                <div class="col-sm-6" align="right">
+                    <a href=":">Forgot password?</a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " align="middle">
-            <a href="index.html">Home</a> ||
-            <a href="about.html">About</a> ||
-            <a href="portfolio.html">Portfolio</a> ||
-            <a href="gallery.html">Gallery</a> ||
-            <a href="contact.html">Contact</a>
+
+<div class="modal fade" id="signUp">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Create an account</h3>
+                <button class="close" data-dismiss="modal">
+                    &Cross;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="col-sm-12">
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">User name</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="user_name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Email Address</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="email_address" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Confirm Password</label>
+                        <div class="col-sm-8">
+                            <input type="confirm_password" name="confirm_password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4"></label>
+                        <div class="col-sm-12">
+                            <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " >
+<section class="add-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
 
-            <img src="images/mission_statement.png" class="img-thumbnail" height="200" width="200" alt=""/>
+                <div class="carousel slide" data-ride="carousel" data-interval="1500">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel-item-padding">
+                            <h1 align="middle">Mission </h1>
+                            <h3 align="middle">Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more about <b>Web Application Development</b> by using PHP which I can use for my future career growth. </h3>
+                        </div>
 
-            <img src="images/vision.jpg" class="img-thumbnail" height="130 " width="140" alt=""/>
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Vision</h1>
+                            <h3 align="middle">I want to be a well known web application developer. For gaining my goal I try to give my best effort. And I am working on it. I want to be expert on my work.</h3>
+                        </div>
 
-            <img src="images/Dreams.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
-
-        </div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " >
-            <pre>
-            <!--<p>-->
-            Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more
-            about <b>Web Application Development</b> by using PHP which I can use for my future career growth.
-            <!--</p>-->
-            <!--<p>-->
-
-            I want to be a well known web application developer. For gaining my goal I try to give my best effort.
-            And I am working on it. I want to be expert on my work
-            <!--</p>-->
-            <!--<p>-->
-
-
-
-            I have lots of dreams……
-            1. To be a well known <b>Web Application Developer</b>.
-            2. Be a hacker.
-            3. Be an expert on my work.
-            4. Wants to buy different type of cars.
-            5. I want to keep a lion as my pet.
-            6. Wants to be a perfect happy person.
-            7. Wants to help poor, uneducated people for their better life.
-            8. And when getting old, i want to live in village with my green garden.
-            <!--</p>-->
-                </pre>
+                        <div class="carousel-item carousel-item-padding">
+                            <h1 align="middle">Dreams</h1>
+                            <h3 align="middle">To be a well known <b>Web Application Developer</b>........</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 50px; border: 1px solid; " >
-            <p align="center">Created by Shetu Chowdhury</p>
-        </div>
-    </div>
-</div>
-</div>
+
+
+<script src="js/jquery-3.2.1.js"></script>
+<script src="js/popper.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>-->
 
 <script src="js/bootstrap.js"></script>
 </body>
